--- a/Box Game/index.html
+++ b/Box Game/index.html
@@ -8,23 +8,55 @@
 </head>
 <body onload=" f()">
     <div class="d-flex height-100vh justify-content-center align-items-center">
-        <div class = "container" id="diva">
-            <div class = "cell" onclick="renk(0,0)" ></div>
-            <div class = "cell" onclick="renk(0,1)"></div>
-            <div class = "cell" onclick="renk(0,2)"></div>
-            <div class = "cell" onclick="renk(0,3)"></div>
-            <div class = "cell" onclick="renk(1,0)"></div>
-            <div class = "cell" onclick="renk(1,1)"></div>
-            <div class = "cell" onclick="renk(1,2)"></div>
-            <div class = "cell" onclick="renk(1,3)"></div>
-            <div class = "cell" onclick="renk(2,0)"></div>
-            <div class = "cell" onclick="renk(2,1)"></div>
-            <div class = "cell" onclick="renk(2,2)"></div>
-            <div class = "cell" onclick="renk(2,3)"></div>
-            <div class = "cell" onclick="renk(3,0)"></div>
-            <div class = "cell" onclick="renk(3,1)"></div>
-            <div class = "cell" onclick="renk(3,2)"></div>
-            <div class = "cell" onclick="renk(3,3)"></div>
+        <div class="container" id="diva">
+            <div class="cell-container" onclick="renk(0,0)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(0,1)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(0,2)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(0,3)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(1,0)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(1,1)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(1,2)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(1,3)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(2,0)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(2,1)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(2,2)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(2,3)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(3,0)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(3,1)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(3,2)">
+                <div class="cell"></div>
+            </div>
+            <div class="cell-container" onclick="renk(3,3)">
+                <div class="cell"></div>
+            </div>
         </div>
     </div>
 </body>
