--- a/Box Game/index.html
+++ b/Box Game/index.html
@@ -2,59 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
-<body onload=" f()">
+<body onload="analyzeCells()">
     <div class="d-flex height-100vh justify-content-center align-items-center">
         <div class="container" id="diva">
-            <div class="cell-container" onclick="renk(0,0)">
+            <div class="cell-container" onclick="changeCells(0,0)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(0,1)">
+            <div class="cell-container" onclick="changeCells(0,1)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(0,2)">
+            <div class="cell-container" onclick="changeCells(0,2)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(0,3)">
+            <div class="cell-container" onclick="changeCells(0,3)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(1,0)">
+            <div class="cell-container" onclick="changeCells(1,0)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(1,1)">
+            <div class="cell-container" onclick="changeCells(1,1)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(1,2)">
+            <div class="cell-container" onclick="changeCells(1,2)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(1,3)">
+            <div class="cell-container" onclick="changeCells(1,3)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(2,0)">
+            <div class="cell-container" onclick="changeCells(2,0)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(2,1)">
+            <div class="cell-container" onclick="changeCells(2,1)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(2,2)">
+            <div class="cell-container" onclick="changeCells(2,2)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(2,3)">
+            <div class="cell-container" onclick="changeCells(2,3)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(3,0)">
+            <div class="cell-container" onclick="changeCells(3,0)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(3,1)">
+            <div class="cell-container" onclick="changeCells(3,1)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(3,2)">
+            <div class="cell-container" onclick="changeCells(3,2)">
                 <div class="cell"></div>
             </div>
-            <div class="cell-container" onclick="renk(3,3)">
+            <div class="cell-container" onclick="changeCells(3,3)">
                 <div class="cell"></div>
             </div>
         </div>
