Add background gradient animation

--- a/Box Game/index.html
+++ b/Box Game/index.html
@@ -8,7 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body onload="analyzeCells(), analyzeDisplays(), shape()">
-    <div class="d-flex height-100vh justify-content-center align-items-center background-image">
+    <div class="d-flex height-100vh justify-content-center align-items-center background-animation">
         <div class="container" id="diva">
             <div class="cell-container" onclick="changeCells(0,0)">
                 <div class="cell"></div>
